Generate a phenotype overview for every center